--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <div class="footer-col col-md-4">
                         <h3>Contact</h3>
                         
-                          <i class="fa fa-fw fa-facebook"> <a href = "https://www.facebook.com/me.kimhoe"> Low Kim Hoe </a></i>
+                          <i class="fa fa-fw fa-facebook"> </i> <a href = "https://www.facebook.com/me.kimhoe"> Low Kim Hoe </a>
                           <p> Instagram: <a href = "https://www.instagram.com/lowkimhoe/?hl=en"> lowkimhoe </a></p>
                           <p> Linkedin: <a href = " https://www.linkedin.com/in/low-kim-hoe-27523a125?trk=nav_responsive_tab_profile_pic"> Low Kim Hoe </a> </p>
 			  <p> Contact number: <a href= "tel:+60163860623" > +6016-386-0623 </a> </p>
