--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <div class="footer-col col-md-4">
                         <h3>Contact</h3>
                         
-                          <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                          <a class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                           <p><a href = "https://www.facebook.com/me.kimhoe"> Low Kim Hoe </a></p>
                           <p> Instagram: <a href = "https://www.instagram.com/lowkimhoe/?hl=en"> lowkimhoe </a></p>
                           <p> Linkedin: <a href = " https://www.linkedin.com/in/low-kim-hoe-27523a125?trk=nav_responsive_tab_profile_pic"> Low Kim Hoe </a> </p>
@@ -189,7 +189,7 @@
                         <h3>Home Page</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-playstore"></i></a>
                             </li>
                             
                         </ul>
