--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <section id="contact">
             <div class="container">
                 <div class="row">
-                    <div class="footer-col col-md-12">
+                    <div class=""col-lg-7 col-lg-offset-3">
                         <h3>Contact</h3>
  
                           <p> 
@@ -201,6 +201,7 @@
             </div>
         </section>
         
+     <!-- Footer -->  
     <footer class="text-center">
         <div class="footer-above">
             <div class="container">
