--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
     </section>
 
     <!-- Footer -->
+    <Style>
+    	section {color:black;}
+    </Style>
     <section id="contact">
             <div class="container">
                 <div class="row">
