--- a/index.html
+++ b/index.html
@@ -169,10 +169,8 @@
     </section>
 
     <!-- Footer -->
-    <Style>
-    	section {color:black;}
-    </Style>
-    <section id="contact">
+     <footer class="text-center" id = "contact">
+     	 <div class="footer-above">
             <div class="container">
                 <div class="row">
                     <div class=""col-lg-7 col-lg-offset-3">
@@ -204,9 +202,7 @@
             </div>
         </section>
         
-     <!-- Footer -->  
-    <footer class="text-center">
-        <div class="footer-above">
+        <div class="footer-below">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
