--- a/index.html
+++ b/index.html
@@ -174,15 +174,15 @@
             <div class="container">
                 <div class="row">
                     <div class=""col-lg-7 col-lg-offset-3">
-                        <h3>Contact</h3>
- 
+                        <h2>Contact</h2>
+                        <hr class="star-primary">
                           <p> 
                           
-                          <a class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i> </a> <a href = "https://www.facebook.com/me.kimhoe">  Low Kim Hoe </a> <br>
-                          <a class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i> </a> <a href = "https://www.instagram.com/lowkimhoe/?hl=en">  lowkimhoe  </a> <br>
-                          <a class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i> </a> <a href = "https://www.linkedin.com/in/low-kim-hoe-27523a125?trk=nav_responsive_tab_profile_pic">  Low Kim Hoe </a> <br>
-                          <a class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i> </a> <a href = "mailto:lkh_bear94@hotmail.com">  lkh_bear94@hotmail.com  </a> <br>
-			  <a class="btn-social btn-outline"><i class="fa fa-fw fa-phone"></i> </a> <a href = "tel:+60163860623">  +6016-386-0623  </a>
+                          <a class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i> </a> &nbsp <a href = "https://www.facebook.com/me.kimhoe"> Low Kim Hoe </a> <br>
+                          <a class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i> </a> &nbsp <a href = "https://www.instagram.com/lowkimhoe/?hl=en">  lowkimhoe  </a> <br>
+                          <a class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i> </a> &nbsp <a href = "https://www.linkedin.com/in/low-kim-hoe-27523a125?trk=nav_responsive_tab_profile_pic">  Low Kim Hoe </a> <br>
+                          <a class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i> </a> &nbsp <a href = "mailto:lkh_bear94@hotmail.com">  lkh_bear94@hotmail.com  </a> <br>
+			  <a class="btn-social btn-outline"><i class="fa fa-fw fa-phone"></i> </a> &nbsp <a href = "tel:+60163860623">  +6016-386-0623  </a>
 			  
 			  </p>
 
