--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile3.jpg" alt="">
+                    <img class="img-responsive" src="img/profile4.jpg" alt="">
                     <div class="intro-text">
                         <span class="name">Eric Low Kim Hoe</span>
                         <hr class="star-light">
-                        <span class="skills">Fresh Graduate Student with a Bachelor of Computer Science (hons.) with specialization in Information System Engineering 
+                        <span class="skills">Bachelor of Computer Science (hons.) with specialization in Information System Engineering 
 						, Euphonium enthusiast</span>
                     </div>
                 </div>
