--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 							Classification used to evaluate the performance of the classification models by the classifiers.
 							Lastly, I have developed a <mark>GUI</mark> to predict the bankruptcy by using Java Programming Language.</li></div>
 							
-							<br></div><h4>GUI Interface</h4><br>
+							<br><h4>GUI Interface</h4><br>
 							
 							<li>Main Interface
 							<img src="img/portfolio/1.png" class="img-responsive img-centered" alt=""> <br> </li>
