--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         <div class="modal-body">
                             <h2> <b>Eric Low Kim Hoe </b></h2>
 							<h5> lkh_bear94@hotmail.com </h5>
-							<a href=" tree/gh-pages/img/Resume.docx" style="font-size: 20px" download>My Resume</a>
+							<a href="https://github.com/hoe94/Eric/blob/gh-pages/img/Resume.docx?raw=true " style="font-size: 20px" download>My Resume</a>
 							
                             <hr class="star-primary"><br><br>
                             <!--<img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">-->
