--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2> <b>Eric Low Kim Hoe </b></h2>
-							<h5><a class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i> </a> &nbsp <a href = "mailto:lkh_bear94@hotmail.com">  lkh_bear94@hotmail.com  </a></h5>
-			                                <h5><a class="btn-social btn-outline"><i class="fa fa-fw fa-phone"></i> </a> &nbsp <a href = "tel:+60163860623">  +6016-386-0623  </a></h5><br>
+							<h5><a href = "mailto:lkh_bear94@hotmail.com">  lkh_bear94@hotmail.com  </a></h5>
+			                                <h5><a href = "tel:+60163860623">  +6016-386-0623  </a></h5><br>
 							<!--<a href="https://github.com/hoe94/Eric/blob/gh-pages/img/Resume.docx?raw=true " style="font-size: 20px" download>My Resume</a>-->
 							<p>Please drop me a email or make a phone call, if you are interested in know more details about me.</p>
 							
