--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="col-lg-12 text-center">
                     <h2>Portfolio</h2>
                     <hr class="star-primary">
-					<p> These are my <mark> INTEREST </mark> in my life, IT and Music. Please click in the portfolio for more details. </p> <br><br>
+					<p> These are my <mark> INTEREST </mark> in my life, IT and Music. Please <mark >CLICK IN </mark>the portfolio for <mark>MORE details.</mark></p> <br><br>
                 </div>
             </div>
 			
