--- a/index.html
+++ b/index.html
@@ -242,8 +242,11 @@
                             <hr class="star-primary"><br><br>
                             <!--<img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">-->
 			                <h3>Experience</h3>
+
 	                        <hr>
-				            <strong><font size = "4"> Data Enginner </font> </strong>
+				            <div align = 'left'> <strong><font size = "4"> Data Enginner </font> </strong></div>
+							<div align = 'left'> <strong><font size = "4"> Nettium Sdn Bhd.</font> </strong></div>
+							<div align = 'left'> <strong><font size = "4"> September 2016 - Present </font> </strong></div>
 							</hr>
 
 							
