--- a/index.html
+++ b/index.html
@@ -244,10 +244,17 @@
 			                <h3>Experience</h3>
 
 	                        <hr>
-				            <div align = 'left'> <strong><font size = "4"> Data Enginner </font> </strong></div>
-							<div align = 'left'> <strong><font size = "4"> Nettium Sdn Bhd.</font> </strong></div>
-							<div align = 'left'> <strong><font size = "4"> September 2016 - Present </font> </strong></div>
+				            <div align = 'left'> <strong><font size = "4"> Data Enginner </font> </strong>
+							<strong><font size = "4"> Nettium Sdn Bhd.</font> </strong>
+							<strong><font size = "4"> September 2016 - Present </font> </strong>
+						       </div>
 							</hr>
+			       <hr>
+			      <div align = 'left'><font size="4">
+				Nettium is the creator of innovative solutions ranging from online gaming, e-commerce, gamification to talent management. 
+			       Transform the high potential business idea into next generation eBusiness.
+			</font></div>
+			/hr>
 
 							
 							<h3>Education Background</h3>
